package ub.edu.model.ValoracioStrategy;

public class Estrelles implements ValoracioType {

    private int val;

    public Estrelles(int val){
        this.val=val;
    }

    public int getVal() {
        return val;
    }
}
