package ub.edu.model.ValoracioStrategy;

public interface ValoracioType {
    public int getVal();
}
