@startuml

title __VALORACIOSTRATEGY's Class Diagram__\n

  namespace ub.edu.model {
    namespace ValoracioStrategy {
      class ub.edu.model.ValoracioStrategy.Estrelles {
          - val : int
          + Estrelles()
          + getVal()
      }
    }
  }
  

  namespace ub.edu.model {
    namespace ValoracioStrategy {
      class ub.edu.model.ValoracioStrategy.Like {
          - val : int
          + Like()
          + getVal()
      }
    }
  }
  

  namespace ub.edu.model {
    namespace ValoracioStrategy {
      class ub.edu.model.ValoracioStrategy.Valoracio {
          - valoracions : ArrayList<ValoracioType>
          + Valoracio()
          + getNumValoracioPerType()
          + getValoracions()
          + setStrategy()
          + valorar()
      }
    }
  }
  

  namespace ub.edu.model {
    namespace ValoracioStrategy {
      interface ub.edu.model.ValoracioStrategy.ValoracioType {
          {abstract} + getVal()
      }
    }
  }
  

  namespace ub.edu.model {
    namespace ValoracioStrategy {
      class ub.edu.model.ValoracioStrategy.ValorarDislike {
          + getNum()
          + toString()
          + valorar()
      }
    }
  }
  

  namespace ub.edu.model {
    namespace ValoracioStrategy {
      class ub.edu.model.ValoracioStrategy.ValorarEstrelles {
          + getNum()
          + toString()
          + valorar()
      }
    }
  }
  

  namespace ub.edu.model {
    namespace ValoracioStrategy {
      class ub.edu.model.ValoracioStrategy.ValorarLikes {
          + getNum()
          + toString()
          + valorar()
      }
    }
  }
  

  namespace ub.edu.model {
    namespace ValoracioStrategy {
      interface ub.edu.model.ValoracioStrategy.ValorarStrategy {
          {abstract} + getNum()
          {abstract} + toString()
          {abstract} + valorar()
      }
    }
  }
  

  ub.edu.model.ValoracioStrategy.Estrelles .up.|> ub.edu.model.ValoracioStrategy.ValoracioType
  ub.edu.model.ValoracioStrategy.Like .up.|> ub.edu.model.ValoracioStrategy.ValoracioType
  ub.edu.model.ValoracioStrategy.Valoracio o-- ub.edu.model.ValoracioStrategy.ValorarStrategy : str
  ub.edu.model.ValoracioStrategy.ValorarDislike .up.|> ub.edu.model.ValoracioStrategy.ValorarStrategy
  ub.edu.model.ValoracioStrategy.ValorarEstrelles .up.|> ub.edu.model.ValoracioStrategy.ValorarStrategy
  ub.edu.model.ValoracioStrategy.ValorarLikes .up.|> ub.edu.model.ValoracioStrategy.ValorarStrategy
  ub.edu.model.ValoracioStrategy.ValoracioType -- ub.edu.model.ValoracioStrategy.Valoracio : conté


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
